# motornet_demo

./: .gitignore  README.md  clear_caches.sh  demo1.py  demo1_modular.py  demo1_modular_visualize.ipynb  demo1_sparsity.py  demo1_visualize.ipynb  go_1module.py  go_2module.py  go_3module.py  go_4module.py  go_modular.sh  go_modular_parallel.sh  mehrdad_policies.py  my_env.py  my_loss.py  my_policy.py  my_policy_sparsity.py  my_task.py  my_utils.py  pyproject.toml  reaching_model.py  reaching_model.py.bak  reaching_model_guide.md  requirements.txt  setup.sh  visualize_modular.ipynb
archive/: demo1_visualize.ipynb
demo1/: demo1_cfg.json  demo1_config.json  demo1_episode_data.pkl  demo1_losses.json  demo1_test_data.pkl  demo1_training_state.json  demo1_weights.pkl
demo1_modular/: demo1_modular_cfg.json  demo1_modular_config.json  demo1_modular_losses.json  demo1_modular_training_state.json
demo_modular/: demo_modular_config.json  demo_modular_training_state.json
demo_modular_1/: demo_modular_1_config.json  demo_modular_1_training_state.json
demo_modular_2/: demo_modular_2_config.json  demo_modular_2_training_state.json
examples/: cli_examples.sh  quickstart.py
motornet/: policy.py  skeleton.py
motornet_compiled/: plotor.py
motornet_master/: muscle.py
my_1mod/: my_1mod_config.json  my_1mod_test_data.pkl  my_1mod_training_state.json  my_1mod_weights.pkl
my_2mod/: my_2mod_config.json  my_2mod_test_data.pkl  my_2mod_training_state.json  my_2mod_weights.pkl
my_3mod/: my_3mod_config.json  my_3mod_test_data.pkl  my_3mod_training_state.json  (+1 more)
(+4 files in other folders)
