[project]
name = "motornet_demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asttokens==3.0.0",
  "cloudpickle==3.1.1",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "decorator==5.2.1",
  "Farama-Notifications==0.0.4",
  "filelock==3.19.1",
  "fonttools==4.60.0",
  "fsspec==2025.9.0",
  "gymnasium==1.2.0",
  "ipython==9.5.0",
  "ipython_pygments_lexers==1.1.1",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "kiwisolver==1.4.9",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.6",
  "matplotlib-inline==0.1.7",
  "mpmath==1.3.0",
  "networkx==3.5",
  "numpy==2.3.3",
  "packaging==25.0",
  "parso==0.8.5",
  "pexpect==4.9.0",
  "pillow==11.3.0",
  "prompt_toolkit==3.0.52",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "Pygments==2.19.2",
  "pyparsing==3.2.5",
  "python-dateutil==2.9.0.post0",
  "scikit-learn>=1.7.2",
  "setuptools==80.9.0",
  "six==1.17.0",
  "stack-data==0.6.3",
  "sympy==1.14.0",
  "torch==2.8.0",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "typing_extensions==4.15.0",
  "wcwidth==0.2.14",
]
